--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "express": "4.21.2"
   },
   "devDependencies": {
-    "@types/node": "20.17.6",
+    "@types/elliptic": "6.4.18",
     "@types/express": "4.17.21",
-    "typescript": "5.7.2",
-    "@types/elliptic": "6.4.18"
+    "@types/node": "20.17.6",
+    "rimraf": "6.0.1",
+    "typescript": "5.7.2"
   }
 }
