--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "rimraf dist && rimraf tsconfig.tsbuildinfo && tsc",
     "dev": "tsx src/index.ts",
     "start": "tsx src/index.ts",
-    "lint": "eslint src/**/*.ts"
+    "lint": "eslint src/**/*.ts",
+    "agent": "dotenv --e $HOME/.agentcoin-fun/env.production -- tsx dist/index.js"
   },
   "dependencies": {
     "@turnkey/http": "2.18.0",
@@ -25,6 +26,7 @@
     "@types/express": "4.17.21",
     "@types/node": "20.17.6",
     "rimraf": "6.0.1",
-    "typescript": "5.7.2"
+    "typescript": "5.7.2",
+    "dotenv-cli": "7.4.1"
   }
 }
