--- a/.dockerignore
+++ b/.dockerignore
@@ -1,12 +1,14 @@
-   node_modules
-   bun.lockb
-   .next
-   dist
-   .turbo
-   .env
-   .env.local
-   .env.development.local
-   .env.test.local
-   .env.production.local
-   .env.development
-   .env.test
+node_modules
+bun.lockb
+.next
+dist
+.turbo
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.development
+.env.test
+.git
+*.log
