--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,12 +13,13 @@ services:
           echo "POSTGRES_USER=agentcoin" > /data/db.env
           echo "POSTGRES_DB=agentcoin" >> /data/db.env
           echo "POSTGRES_PASSWORD=$$(openssl rand -base64 32)" >> /data/db.env
-          chmod 600 /data/db.env
-      fi
-      set -a
-      source /data/db.env
-      set +a
-      exec docker-entrypoint.sh postgres'
+          chmod 600 /data/db.env;
+      fi;
+      set -a;
+      source /data/db.env;
+      set +a;
+      exec docker-entrypoint.sh postgres
+      '
     networks:
       - skynet
     healthcheck:
