--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
           echo "Generating new db.env file..."
           echo "POSTGRES_USER=agentcoin" > /data/db.env
           echo "POSTGRES_DB=agentcoin" >> /data/db.env
-          echo "POSTGRES_PASSWORD=$$(openssl rand -base64 32)" >> /data/db.env
+          echo "POSTGRES_PASSWORD=$$(openssl rand -hex 32)" >> /data/db.env
           chmod 600 /data/db.env;
       fi;
       set -a;
