--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   # postgres service
   agent-postgres:
-    image: postgres:latest
+    image: pgvector/pgvector:0.8.0-pg17
     restart: always
     volumes:
       - ${HOME}/.agentcoin-fun/dbdata:/var/lib/postgresql/data
