--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "@turnkey/http": "2.18.0",
     "@turnkey/sdk-server": "1.7.3",
     "@turnkey/viem": "0.6.10",
+    "axios": "1.7.9",
     "dotenv": "16.4.7",
+    "elliptic": "6.6.1",
+    "express": "4.21.2",
     "simple-git": "3.27.0",
     "socket.io-client": "4.8.1",
     "viem": "2.21.49",
-    "zod": "3.24.1",
-    "elliptic": "6.6.1",
-    "express": "4.21.2"
+    "zod": "3.24.1"
   },
   "devDependencies": {
     "@types/elliptic": "6.4.18",
