--- a/package.json
+++ b/package.json
@@ -24,10 +24,22 @@
   },
   "devDependencies": {
     "@types/elliptic": "6.4.18",
-    "@types/express": "4.17.21",
-    "@types/node": "20.17.6",
-    "rimraf": "6.0.1",
-    "typescript": "5.7.2",
-    "dotenv-cli": "7.4.1"
+    "@types/express": "5.0.0",
+    "@types/pdf-parse": "1.1.4",
+    "dotenv-cli": "7.4.1",
+    "eslint": "8.57.1",
+    "eslint-config-next": "15.1.4",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-config-standard": "17.1.0",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-jasmine": "4.2.2",
+    "eslint-plugin-n": "17.14.0",
+    "eslint-plugin-prettier": "5.2.1",
+    "eslint-plugin-promise": "7.1.0",
+    "prettier": "3.3.3",
+    "ts-node": "10.9.2",
+    "tsup": "8.3.5",
+    "tsx": "4.19.2",
+    "typescript": "5.6.3"
   }
 }
