--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
 
   # ayaos process
   agent:
-    image: avp1598/ayaos
+    image: hishtribes/agentcoin-runtime
     restart: always
     working_dir: /root/.agentcoin-fun/code
     command: ['bun', 'run', 'agent']
@@ -44,7 +44,7 @@ services:
 
   # agent sentinel process
   agent-sentinel:
-    image: avp1598/ayaos
+    image: hishtribes/agentcoin-runtime
     restart: always
     working_dir: /root/sentinel
     command: ['bun', 'run', 'agent']
